*SVN*

* Fixed FormOptionsHelper#select to respect :selected value #5813

* Fixed TextHelper#simple_format to deal with multiple single returns within a single paragraph #5835 [moriq@moriq.com]

* Fixed TextHelper#pluralize to handle 1 as a string #5909 [rails@bencurtis.com]

* Improved resolution of DateHelper#distance_of_time_in_words for better precision #5994 [Bob Silva]

* Changed that uncaught exceptions raised any where in the application will cause RAILS_ROOT/public/500.html to be read and shown instead of just the static "Application error (Rails)" [DHH]

* Integration tests: thoroughly test ActionController::Integration::Session.  #6022 [Kevin Clark]
    (tests skipped unless you `gem install mocha`)

* Added deprecation language for pagination which will become a plugin by Rails 2.0 [DHH]

* Added deprecation language for in_place_editor and auto_complete_field that both pieces will become plugins by Rails 2.0 [DHH]

* Deprecated all of ActionController::Dependencies. All dependency loading is now handled from Active Support [DHH]

* Added assert_select* for CSS selector-based testing (deprecates assert_tag) #5936 [assaf.arkin@gmail.com]

* radio_button_tag generates unique id attributes.  #3353 [Bob Silva, somekool@gmail.com]

* strip_tags returns nil for a blank arg such as nil or "".  #2229 [duncan@whomwah.com]

* Cleanup assert_tag :children counting.  #2181 [jamie@bravenet.com]

* button_to accepts :method so you can PUT and DELETE with it.  #6005 [Dan Webb]

* Update sanitize text helper to strip plaintext tags, and <img src="javascript:bang">.  [Rick Olson]

* Update routing documentation.  Closes #6017 [Nathan Witmer]

* Add routing tests to assert that RoutingError is raised when conditions aren't met.  Closes #6016 [Nathan Witmer]

* Deprecation: update docs. #5998 [jakob@mentalized.net, Kevin Clark]

* Make auto_link parse a greater subset of valid url formats. [Jamis Buck]
